# self_organization_percolation

./: .git.broken-worktree  .gitignore  CMakeLists.txt  README.md  caption  crop_frames.py  fix-jupyter-ext.sh  network.cpp  network_wc.cpp  process_data.py  ranges_rho_min  requirements.txt  shell.sh  test_color.ipynb  update_published_means.py
RunningStatisticals/: L_256_dim_3_num_colors_2.txt
analysis_equilibration/: animation_reanalysis.cpp  animation_reanalysis.hpp  equilibration_reanalysis.cpp  equilibration_reanalysis.hpp  main_animation_reanalysis.cpp
animation/: Nt_P0_0.10_p0_1.00_seed_630136907.csv  P0_0.10_p0_1.00_seed_1996662930.npz  P0_0.10_p0_1.00_seed_490185132.npz  P0_0.10_p0_1.00_seed_630136907.npz  nt_P0_0.10_p0_1.00_seed_490185132.csv  pt_P0_0.10_p0_1.00_seed_490185132.csv  pt_P0_0.10_p0_1.00_seed_630136907.csv
animation/2D_L1000_nc2_rho0.50_k1.0e-05_Nt200/: P0_0.10_p0_1.00_seed_1.json  P0_0.10_p0_1.00_seed_1.npz
animation/2D_L1000_nc3_rho0.33_k1.0e-05_Nt200/: P0_0.10_p0_1.00_seed_1.json  P0_0.10_p0_1.00_seed_1.npz
animation/3D_L256_nc4_rho0.25_k1.0e-06_Nt3000/: P0_0.10_p0_1.00_seed_1.json
config/: sop_data_config.yaml
jupyter/: 1Color_2D.ipynb  1Color_3D.ipynb  Analysis_L_min.ipynb  Colors_Analysis.ipynb  Colors_Analysis_2D.ipynb  Colors_Analysis_3D.ipynb  SizeEffects.ipynb  Tests_Equilibration.ipynb  TiimeSeries_Analysis_2D.ipynb  TimeSeries_Analysis.ipynb  TimeSeries_Analysis_2D.ipynb  TimeSeries_Analysis_3D.ipynb  Z_layer_effects.ipynb  analisys_k_Nt_3D.ipynb  animation_network.ipynb  animation_network_2D.ipynb  animation_network_3D.ipynb  article_plots.ipynb  conditions_effects.ipynb  counts_by_axis.parquet  density_effects.ipynb  landscape.ipynb  mayavi_conveter_data.ipynb  nc_summary.csv  network_3D_single.ipynb  open_positions.ipynb  parameters_analysis.ipynb  processing_data.ipynb  properties.mplstyle  read_network.ipynb  results_paper_97.ipynb  study.ipynb  temporario.ipynb  teste.ipynb
jupyter/.ipynb_checkpoints/: Colors_Analysis_2D-checkpoint.ipynb  Colors_Analysis_3D-checkpoint.ipynb  TimeSeries_Analysis_2D-checkpoint.ipynb
jupyter/src/: ColorsAnalysis.py  SizeEffects_functions.py  TimeSeriesAnalysis.py  analysis_L_min_functions.py  fss_collapse_core.py  landscape_functions.py  network_animation.py  network_plots.py  process_data.py  results_paper.py  stability_tests.py
network/2D_L2048_nc3_rho0.33_k1.0e-05_Nt400/: P0_0.10_p0_1.00_seed_1.json  P0_0.10_p0_1.00_seed_1.npz
network/3D_L256_nc4_rho0.25_k1.0e-06_Nt3000/: P0_0.10_p0_1.00_seed_1.npz
network/3D_L256_nc7_rho0.14_k1.0e-06_Nt3000/: P0_0.10_p0_1.00_seed_1.json  P0_0.10_p0_1.00_seed_1.npz
python/: animation_network_3D.py  create_animation_videos_3D.py  create_animation_videos_3D_front.py  gen_L_min.py  network_2D.py  network_3D.py  network_3D_front.py  network_3D_tese.py  processing_data.py  run_samples.py  run_samples_cluster.py  runner_time.py  shortest_path_map.py  to_run_runner_time.txt
python/src/: SOP_parms.py  network_functions.py  process_data.py  run_multi_functions.py  run_samples_cluster.py  run_samples_cluster_functions.py  run_samples_functions.py
schematics/: properties  text_legend.txt
schematics/SVGs/: FIG_A
shells/: 2D_each_K.sh  2D_each_NT.sh  data_2D.sh  data_3D.sh  install_python_dependencies.sh  reproduce_fig1.sh  reproduce_fig2.sh  reproduce_fig3.sh  run_all.sh  run_python.sh  run_stats.sh  tests_Nt_3D.sh  time_run.sh
shells/aa/: run_stats.sh
shells/after_2/: NT_20971_L_1024_k_1e-06.sh  NT_5242_L_512_k_1e-06.sh
src/: DSU.cpp  DSU.hpp  LargestComponentBFS.cpp  LargestComponentBFS.hpp  LateralCorrelation.cpp  LateralCorrelation.hpp  animation_utils.hpp  create_folders.cpp  create_folders.hpp  equilibration_partition.cpp  equilibration_partition.hpp  height_stop_config.hpp  helpers_partitions.hpp  helpers_print.cpp  helpers_print.hpp  main.cpp  my_program  network.cpp  network.hpp  network_partitions.cpp  network_partitions.hpp  rand_utils.cpp  rand_utils.hpp  struct_network.hpp  write_save.cpp  write_save.hpp
tests/: test_process_dynamic_growth.py
tools/: filter_compact.py  generate_requeriments.py  index_raw_samples.py  normalize_species.py  plot_timeseries.py  process_data.py  process_dynamic_growth.py  process_equilibration.sh  recompute_published_teq.py  recompute_raw_teq.py  run_create_network_test.cpp  sample_naming.py  sop_paths.py  transfer_ssh.sh  update_all.sh  update_dynamic.sh  update_group_summaries.py  update_published_means.py  update_published_sizes.py  usage_ram_equlibration.txt  validate_lateral_correlation.cpp
